src/objects/Corporate_Event_Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Business_Discussion_Occurred__c</fullName>
        <formula>IF(ISPICKVAL( Event_Type__c,&quot;Customer Event&quot;),&quot;Yes&quot;, 
IF(ISPICKVAL(Event_Type__c,&quot;Team Event&quot;),&quot;Yes&quot;,&quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Discussion Occurred</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Explanation__c</fullName>
        <description>Event explanation for Customer and Team events only.</description>
        <inlineHelpText>Event explanation for Customer and Team events only.</inlineHelpText>
        <label>Event Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capital One Arena</fullName>
                </value>
                <value>
                    <fullName>Wolf Trap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Sponsor__c</fullName>
        <label>Event Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Event</fullName>
                </value>
                <value>
                    <fullName>Team Event</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Corporate Event Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Event Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Event_Explanation_Required</fullName>
        <active>true</active>
        <description>Event explanation comments are required if event type are Customer Event or Team Event.</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(Event_Type__c,&apos;Customer Event&apos;),
ISPICKVAL(Event_Type__c,&apos;Team Event&apos;)
),
ISBLANK( Event_Explanation__c )
)</errorConditionFormula>
        <errorMessage>Event Explanation is required if the event type is Customer or Team Event.</errorMessage>
    </validationRules>
</CustomObject>